# sinonym

./: .gitignore  .pytest_failures.txt  MANIFEST.in  README.md  WESTERN_PARTICLES_LOG.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml  workflow.yaml
data/: README.md  chinese_japanese_classifier.joblib  familyname_orcid.csv  givenname_orcid.csv
docs/: canonical_name_evaluation.md  refactor_lookup_resolver_plan.md
scripts/: README.md  benchmark_stable.py  build_east_asian_name_lexicons.py  change_class_tally.py  check_test_status.py  generate_acl_data.py  generate_chinese_name_corpus_data.py  generate_given_position_data.py  generate_name_statistics.py  generate_surname_romanizations.py  generate_surname_usage_data.py  name_order_routing_rules.py  profile_hotspots.py  profile_multiprocess.py  profile_run.py  profile_threaded.py  train_ml_classifier.py  train_ml_classifier_for_chinese_vs_japanese.py  verify_multiprocess.py
sinonym/: __init__.py  chinese_names_data.py  detector.py  paths.py  resources.py  services.py
sinonym/coretypes/: __init__.py  results.py
sinonym/data/: EAST_ASIAN_NAME_LEXICONS.md  README.md  chinese_japanese_classifier.joblib  given_bigrams.csv  given_position.csv  given_position_acl.csv  surname_particles.csv  surname_romanizations.csv  surname_usage_acl.csv  western_givennames.csv  western_surnames.csv
sinonym/data/name_order_routing/: README.md  pp_abstain_labels.jsonl  pp_vys_abstain_labels.jsonl
sinonym/pipeline/: __init__.py  name_order_routing.py
sinonym/services/: __init__.py  batch_analysis.py  cache.py  east_asian_name_order.py  ethnicity.py  formatting.py  initialization.py  ml_japanese_classifier.py  name_lookup.py  non_person.py  normalization.py  order_metadata.py  parsing.py  person_name_normalization.py  process_pool.py  western_particle.py
sinonym/text_processing/: text_normalizer.py  text_preprocessor.py
sinonym/timo/: config.yaml  integration_test.py  interface.py
sinonym/types/: __init__.py  config.py  results.py
sinonym/utils/: cjk_cache.py  string_manipulation.py
tests/: _case_assertions.py  _fail_log.py  conftest.py  test_acl.py  test_all_chinese_inputs.py  test_basic_chinese_names.py  test_batch.py  test_batch_crash_guard.py  test_bug_report_fixes.py  test_canonical_name_integration.py  test_canonical_results.py  test_check_test_status.py  test_chinese_classification_evidence_gates.py  test_chinese_names.py  test_compound_names.py  test_compound_surname_formats.py  test_east_asian_name_order.py  test_edge_cases.py  test_middle_names.py  test_misc.py  test_mixed_production_cases.py  test_mixed_scripts.py  test_ml_japanese_detection.py  test_multiprocess_pool.py  test_name_formatting.py  test_name_order_routing_label_fixtures.py  test_name_order_routing_rules.py  test_name_statistics_data.py  test_non_chinese_rejection.py  test_performance.py  test_person_name_normalization.py  test_pypinyin_aliases.py  test_regional_variants.py  test_regression_proposals.py  test_surname_romanizations.py  test_surname_usage_data.py  test_timo_interface.py  test_timo_v2_interface.py  test_western_surname_particles.py
tests/data/: western_particle_cases.csv  western_particle_parts_cases.csv
