[metadata]
name = sinonym
version = 0.1.0
description = A short description for sinonym
long_description = file: README.md
long_description_content_type = text/markdown
author = Allen Institute for AI
author_email = opensource@allenai.org
url = https://github.com/allenai/sinonym
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    # add runtime dependencies here, e.g. requests>=2.0

[options.package_data]
* = *.txt, *.rst, *.md